dirty hacking tiempo issue

--- a/charts/templates/songlist.html
+++ b/charts/templates/songlist.html
@@ -11,8 +11,15 @@
 
             
             <div class="card-body">    
-                    <span class="badge badge-pill badge-danger">#{{ item.song_pos }}</span>
-                    <button id='release-count' type='button' class="badge badge-pill badge-warning" data-container="body" data-toggle="tooltip" data-placement="top" title='{{ props.ft(item.release_date) }}'>{{ props.delta(item.release_date).days }} 天前</button>
+                <span class="badge badge-pill badge-danger">#{{ item.song_pos }}</span>
+                <button id='release-count' type='button' class="badge badge-pill badge-warning">{{ props.delta(item.release_date).days }} 天前</button>
+
+                {% if item.company[0] %}
+                    {% if props.statemgr.isKehu(item.company[0]) %}
+                    <span class='badge badge-pill badge-success'>客户</span>
+                    {% endif %}
+                {% endif %}
+
                 <h5 class="card-title"><a href="{{ item.song_url }}" title={{ item.song_title }}>{{ item.song_title }}</h5></a>
                 <h6 class="card-subtitle"><a href="{{ item.artists[0].url }}" title={{ item.artists[0].name }}>{{ item.artists[0].name }}</a></p>
                 <p class="card-text"> © {{ item.company[0] or 'N/A' }} </p>
