--- a/charts/templates/head.html
+++ b/charts/templates/head.html
@@ -1,7 +1,7 @@
 
 {% block head %}
 
-<title>歌曲列表</title>
+<title>{{ props.chart_title }} - {{ props.day }}</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta content="always" name="referrer">
