--- a/charts/templates/nav.html
+++ b/charts/templates/nav.html
@@ -1,6 +1,6 @@
 {% block nav %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">榜单监控</a>
+        <a class="navbar-brand" href="#">LM Helper</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
